CSS Home Page Font Size Breakpoints

--- a/django/bootcamp/templates/camp.html
+++ b/django/bootcamp/templates/camp.html
@@ -45,7 +45,7 @@
 			<div class="bg-image bg-parallax overlay" style="background-image:url(static/img/camp-background.png)"></div>
 			<!-- /Backgound Image -->
 
-			<div class="container">
+			<div class="container"  style="margin-top: 15px;">
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 text-center">
 						<h1 class="white-text">COURT SCIENCE VIRTUAL CAMP</h1>
