--- a/django/bootcamp/templates/visualization_lab.html
+++ b/django/bootcamp/templates/visualization_lab.html
@@ -63,7 +63,7 @@
 			<div class="container">
 
 				<!-- row -->
-				<div class="row" style="display: block;">
+				<div class="row" style="display: block; margin-top: 15px;">
 						<div class="col-md-8 col-md-offset-2 text-center">
 							<h2 class="white-text">VISUALIZATION LAB</h2>
 							<p class="lead white-text">Explore countless sports datasets using intuitive and powerful tools.</p>
