styling on home page

--- a/django/bootcamp/templates/index.html
+++ b/django/bootcamp/templates/index.html
@@ -69,12 +69,12 @@
 
 						<div class="section-header text-center">
 							<h2>WHO WE ARE</h2>
-							<p class="lead">
+							<p class="lead" style="text-align: left;">
                                 Court Science is a Canadian not-for-profit organization that aims to bridge the gap between STEM and sports
                                 by making the power of Data Science accessible to youth and sports enthusiasts worldwide through our free online interactive
 								data visualization platform and community initiatives. <br><br>
 								
-								In light of COVID-19, we have shifted all of our outreach efforts online including a <span style="font-weight: bolder; color: #FF6700;">FREE</span> Sports Science Camp. <br> A series of live virtual workshops geared towards youth interested in
+								In light of COVID-19, we have shifted all of our outreach efforts online, including a <a class="link-redirect" href="/camp"><span style="font-weight: bold; color: #FF6700;">FREE</span> Sports Science Camp.</a> <br> It is a series of live virtual workshops geared towards youth interested in
                                 exploring their favourite sport through the lens of STEM and creative problem solving.
                             </p>
 						</div>
@@ -95,10 +95,9 @@
 
 				<!-- row -->
 				<div class="row">
-
+					<h2 class="text-center">COURT SCIENCE VIRTUAL CAMP</h2>
 					<div class="col-md-6">
 						<div class="section-header">
-							<h2>COURT SCIENCE VIRTUAL CAMP</h2>
 							<p class="lead"><b>Court Science Virtual Camp</b> is a first of its kind interactive educational program where sports meets active learning, putting math and science in an exciting new light!</p>
 						</div>
 
