--- a/django/bootcamp/templates/index.html
+++ b/django/bootcamp/templates/index.html
@@ -67,18 +67,20 @@
 				<!-- row -->
 				<div class="row">
 
-						<div class="section-header text-center">
-							<h2>WHO WE ARE</h2>
-							<p class="lead" style="text-align: left;">
+
+                    <h2 class="text-center">WHO WE ARE</h2>
+                    <div class="col-md-12">
+                        <div class="section-header">
+							<p class="lead">
                                 Court Science is a Canadian not-for-profit organization that aims to bridge the gap between STEM and sports
                                 by making the power of Data Science accessible to youth and sports enthusiasts worldwide through our free online interactive
 								data visualization platform and community initiatives. <br><br>
 								
-								In light of COVID-19, we have shifted all of our outreach efforts online, including a <a class="link-redirect" href="/camp"><span style="font-weight: bold; color: #FF6700;">FREE</span> Sports Science Camp.</a> <br> It is a series of live virtual workshops geared towards youth interested in
+								In light of COVID-19, we have shifted all of our outreach efforts online, including a <a class="link-redirect" href="/camp"><span style="font-weight: bold; color: #FF6700;">FREE</span> Sports Science Camp.</a> It is a series of live virtual workshops geared towards youth interested in
                                 exploring their favourite sport through the lens of STEM and creative problem solving.
                             </p>
 						</div>
-
+                    </div>
 				</div>
 				<!-- row -->
 
