--- a/django/bootcamp/templates/camp.html
+++ b/django/bootcamp/templates/camp.html
@@ -80,7 +80,7 @@
                             <label for="date">Date</label>
                             <select class="form-control" id="date" name="date" required>
                                 <option value="" name="" disabled selected>Select an available date</option>
-                                <option value="July17" name="July17">Saturday, July 18, 9:30 - 11:30 AM EST</option>
+                                <option value="July17" name="July17">Wednesday, July 29, 2020, 4:00-6:00 PM EST</option>
                             </select>
                         </div>
                         <div class="form-group">
