Fix data links and remove bad data (2018-19)

--- a/django/bootcamp/templates/visualization_lab.html
+++ b/django/bootcamp/templates/visualization_lab.html
@@ -123,9 +123,8 @@
 					<div id="data-select" class="col-md-6 col-md-offset-5">
 						<select id="drop-down" name="Data selection">
 							<option value="" disabled selected>Select NBA Data Source</option>
-							<option value="https://raw.githubusercontent.com/court-science/MVP/master/NBA%20Data/2019-2020%20NBA%20Player%20Stats.xlsx%20-%20Sheet1.csv">2019-2020 NBA Season</option>
-                        	<option value="https://raw.githubusercontent.com/court-science/MVP/master/NBA%20Data/2018-2019%20NBA%20Player%20Stats.xlsx%20-%20Sheet1.csv">2018-2019 NBA Season</option>
-							<option value="https://raw.githubusercontent.com/court-science/MVP/master/NBA%20Data/nba_draft_combine_all_years.csv">NBA Draft Combine</option>
+							<option value="https://raw.githubusercontent.com/court-science/web-platform/master/django/NBA%20Data/2019-2020%20NBA%20Player%20Stats.xlsx%20-%20Sheet1.csv">2019-2020 NBA Season</option>
+							<option value="https://raw.githubusercontent.com/court-science/web-platform/master/django/NBA%20Data/nba_draft_combine_all_years.csv">2009-2017 NBA Draft Combine</option>
 						</select>
 
 						<body>&nbsp;OR&nbsp;</body>
