--- a/django/bootcamp/templates/camp.html
+++ b/django/bootcamp/templates/camp.html
@@ -77,15 +77,15 @@
                     <h2>Register Now</h2>
                     <form action="https://formspree.io/xaypdvnj" method="POST">
                         <div class="form-group">
-                            <label for="date">Date</label>
+                            <label for="date">Date*</label>
                             <select class="form-control" id="date" name="date" required>
                                 <option value="" name="" disabled selected>Select an available date*</option>
                                 <option value="TBD" name="TBD">Let me know about future workshops!</option>
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="name">Full Name</label>
-                            <input class="form-control" type="text" id="name" name="name" placeholder="Enter Name*" required>
+                            <label for="name">Full Name*</label>
+                            <input class="form-control" type="text" id="name" name="name" placeholder="Enter Name" required>
                         </div>
                         <div class="form-group">
                             <label for="school">School</label>
@@ -100,8 +100,8 @@
                             <input class="form-control" type="text" id="country" name="country" placeholder="Enter Country">
                         </div>
                         <div class="form-group">
-                            <label for="email">E-mail</label>
-                            <input class="form-control" type="email" id="email" name="email" placeholder="Enter E-mail*" required>
+                            <label for="email">E-mail*</label>
+                            <input class="form-control" type="email" id="email" name="email" placeholder="Enter E-mail" required>
                         </div>
                         <div class="form-group">
                             <label for="questions">Additional Comments</label>
@@ -109,7 +109,7 @@
                         </div>
                         <div class="form-check" style="margin-bottom: 5px;">
                             <input type="checkbox" class="form-check-input" id="consent" name="consent" required>
-                            <label class="form-check-label" for="consent">I have read and agree to the terms and conditions outlined by the <a class="link-redirect" href="https://drive.google.com/file/d/1e7j1r38R5HWA55pnvbKxf85bvKEOHN7E/view?usp=sharing" target="_blank">Media Consent Form</a>.</label>
+                            <label class="form-check-label" for="consent">I have read and agree to the terms and conditions outlined by the <a class="link-redirect" href="https://drive.google.com/file/d/1e7j1r38R5HWA55pnvbKxf85bvKEOHN7E/view?usp=sharing" target="_blank">Media Consent Form</a>.*</label>
                         </div>
                         <button type="submit" class="main-button icon-button pull-right">Submit</button>
                     </form>
