--- a/django/bootcamp/templates/camp.html
+++ b/django/bootcamp/templates/camp.html
@@ -79,7 +79,7 @@
                         <div class="form-group">
                             <label for="date">Date*</label>
                             <select class="form-control" id="date" name="date" required>
-                                <option value="" name="" disabled selected>Select an available date*</option>
+                                <option value="" name="" disabled selected>Select an available date</option>
                                 <option value="TBD" name="TBD">Let me know about future workshops!</option>
                             </select>
                         </div>
