add chart background color for saving, change color palette, fix jquery https error

--- a/django/bootcamp/templates/static/css/style.css
+++ b/django/bootcamp/templates/static/css/style.css
@@ -1660,6 +1660,10 @@ div .bootstrap-filestyle .input-group {
     left: 10px;
 }
 
+.graph-svg-component {
+    background-color: aliceblue;
+}
+
 .tooltip {	
 	position: absolute;		
     text-align: center;			
@@ -1748,6 +1752,9 @@ outline: 4px solid lightsalmon;
 	outline: 1px solid #212529;
 	width: 200px;
 	font-style: inherit;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #save-button:hover {
