--- a/django/bootcamp/templates/visualization_lab.html
+++ b/django/bootcamp/templates/visualization_lab.html
@@ -30,7 +30,7 @@
 		<link href="{% static 'css/style.css'%}" rel="stylesheet" type="text/css">
 
 		<!-- 3rd Party JS Libraries -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 		<script src="{% static 'js/papaparse.min.js'%}"></script>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
 		<script src="https://www.gstatic.com/charts/loader.js"></script>
