--- a/django/bootcamp/templates/visualization_lab.html
+++ b/django/bootcamp/templates/visualization_lab.html
@@ -127,6 +127,7 @@
 							<option value="" disabled selected>Select NBA Data Source</option>
 							<option value="https://raw.githubusercontent.com/court-science/web-platform/master/django/NBA%20Data/2019-2020%20NBA%20Player%20Stats.xlsx%20-%20Sheet1.csv">2019-2020 NBA Season</option>
 							<option value="https://raw.githubusercontent.com/court-science/web-platform/master/django/NBA%20Data/nba_draft_combine_all_years.csv">2009-2017 NBA Draft Combine</option>
+							<option value="https://raw.githubusercontent.com/court-science/web-platform/dev/django/NBA%20Data/bball%20ref%20mvp%20stats.csv">1980-2019 NBA MVP's</option>
 						</select>
 
 						<body>&nbsp;OR&nbsp;</body>
