partners and video

--- a/django/bootcamp/templates/index.html
+++ b/django/bootcamp/templates/index.html
@@ -81,7 +81,10 @@
                                 exploring their favourite sport through the lens of STEM and creative problem solving.
                             </p>
 						</div>
-                    </div>
+                        <div class="text-center">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/vscShYVifwc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        </div>
 				</div>
 				<!-- row -->
 
@@ -89,9 +92,53 @@
 			<!-- container -->
 		</div>
 
+        <div id="partners" class="section alternate">
+
+			<!-- container -->
+			<div class="container">
+				<div class="row">
+					<div class="section-header text-center">
+						<h2>OUR PARTNERS</h2>
+					</div>
+				</div>
+				<!-- row -->
+				<div class="row">
+
+						<!-- single course -->
+						<div class="col-md-3 col-sm-6 col-xs-6 text-center">
+								<a href="http://www.4thfamily.org/">
+									<img src="{% static 'img/4th family words large.png'%}" style="height: 150px;" alt="">
+								</a>
+						</div>
+						<!-- /single course -->
+
+						<!-- single course -->
+						<div class="col-md-3 col-sm-6 col-xs-6 text-center">
+								<a href="https://www.ycdsb.ca/2020/07/23/st-robert-chs-student-creates-non-profit-organization-to-engage-youth-in-stem-literacy-and-opportunities/">
+									<img src="{% static 'img/ycdsblogo.jpg'%}" style="height: 150px;" alt="">
+								</a>
+						</div>
+						<!-- /single course -->
+
+						<!-- single course -->
+						<div class="col-md-3 col-sm-6 col-xs-6 text-center">
+								<a href="https://www.vaughan.ca/services/recreation/Pages/Together%20Vaughan.aspx">
+									<img src="{% static 'img/City-of-Vaughan-Logo.jpg'%}" style="height: 150px;" alt="">
+								</a>
+						</div>
+						<!-- /single course -->
+						<div class="col-md-3 col-sm-6 col-xs-6 text-center">
+								<a href="https://www.ontario.ca/page/ministry-education">
+									<img src="{% static 'img/ontario-education-logo.png'%}" style="height: 150px;" alt="">
+								</a>
+						</div>
+                </div>
+			</div>
+			<!-- container -->
+		</div>
 
 		<!-- About -->
-		<div id="virtual-workshops" class="section alternate">
+		<div id="virtual-workshops" class="section">
 
 			<!-- container -->
 			<div class="container">
@@ -156,7 +203,7 @@
 		<!-- /About -->
 
 		<!-- Courses -->
-		<div id="courses" class="section">
+		<div id="courses" class="section alternate">
 
 			<!-- container -->
 			<div class="container">
@@ -306,8 +353,8 @@
 							<!-- <li><a href="#" class="facebook"><i class="fa fa-facebook"></i></a></li> -->
 							<!-- <li><a href="#" class="twitter"><i class="fa fa-twitter"></i></a></li> -->
 							<!-- <li><a href="#" class="instagram"><i class="fa fa-instagram"></i></a></li> -->
-							<!-- <li><a href="#" class="youtube"><i class="fa fa-youtube"></i></a></li> -->
-							<!-- <li><a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a></li> -->
+							<li><a href="https://github.com/court-science/web-platform" class="github"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://ca.linkedin.com/company/courtscience" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
 						</ul>
 					</div>
 					<!-- /social -->
