--- a/django/bootcamp/templates/camp.html
+++ b/django/bootcamp/templates/camp.html
@@ -193,7 +193,8 @@
 							<!-- <li><a href="#" class="twitter"><i class="fa fa-twitter"></i></a></li> -->
 							<!-- <li><a href="#" class="instagram"><i class="fa fa-instagram"></i></a></li> -->
 							<!-- <li><a href="#" class="youtube"><i class="fa fa-youtube"></i></a></li> -->
-							<!-- <li><a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a></li> -->
+							<li><a href="https://github.com/court-science/web-platform" class="github"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://ca.linkedin.com/company/courtscience" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
 						</ul>
 					</div>
 					<!-- /social -->
